# breeze

./: BreezeConfig.cmake.in  CMakeLists.txt
colors/: CMakeLists.txt  ColdlyClassic.colors  ColdlyDark.colors  ColdlyLight.colors
kdecoration/: CMakeLists.txt  breeze.h  breeze.json  breezedecoration.cpp  breezedecoration.h  breezesettingsdata.kcfg  breezesettingsprovider.cpp
kdecoration/config/: CMakeLists.txt  breezeconfigwidget.cpp  kcm_breezedecoration.cpp  kcm_coldlydecoration.json
kdecoration/config/ui/: breezeconfigurationui.ui
kstyle/: CMakeLists.txt  breeze.json  breeze.kcfg  breezehelper.cpp  breezehelper.h  breezemdiwindowshadow.cpp  breezemetrics.h  breezeshadowhelper.cpp  breezeshadowhelper.h  breezestyle.cpp  breezestyleplugin.cpp  coldly.themerc
kstyle/config/: CMakeLists.txt  breezestyleconfig.cpp  breezestyleconfigmodule.cpp  coldlystyleconfig.json  main.cpp
misc/breezetobreezelight/: main.cpp
misc/qtcurvepreset/: CMakeLists.txt  Coldly.qtcurve
wallpapers/: CMakeLists.txt
